--- a/src/components/NotesList/NotesList.css
+++ b/src/components/NotesList/NotesList.css
@@ -23,3 +23,8 @@
     font-size: 10px;
     padding: 0px 20px 20px 30px;
  }
+ #delete {
+    position: fixed;
+    right: 100px;
+    padding-top: 12px;
+ }
