--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,12 +1,19 @@
+.appbar{
+   background-color: #24bdd6;
+}
+
 #screenshot {
-    max-width: 60%;
-    max-height: 60%;
-    margin-left: 40%;
+    max-width: 50%;
+    max-height: 50%;
+    /* margin-left: 40%; */
     border-style: groove;
+    float: right;
  }
  #desc {
     font-size: 30px;
     margin-left: 80px;
-    margin-top: 150px;
+    margin-top: 100px;
     font-weight: 700;
+    float: left;
+    color: rgb(16, 31, 165);
  }
